--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     i am Granat!
-<img src="gram.jpg">
+<img src="gram.jpg" width="300" height="380">
+<pre>
+    приготовление блинчиков бывает разным, например-на кефире,
+    на молоке и на йогурте.необходимые ингридиенты-2 яйца
+    соль 1 щепотка, сахар 1 столовую ложку, молоко 0.5 литра, мука 1 стакан.
+                
+               приготовление
+
+    все тщательно перемешать до того момента когда появяться пузырки.включить плиту поставить сковородку.
+</pre>
 </body>
 </html>
