--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
                 
                приготовление
 
-    все тщательно перемешать до того момента когда появяться пузырки.включить плиту поставить сковородку.
+    все тщательно перемешать до того момента когда появяться
+     пузырки.включить плиту поставить сковородку.смазать 
+     подсолнечным маслом и налить смесь на сковородку.каждую
+      сторону жарить до готовности, рекомендую первую сторону 
+      жарить под крышкой а, когда первая сторона прожариться 
+      снимаем крышку и красиво переворачиваем подбрасывая 
+      блинчик и вторую сторону жарим уже без крышки.готовый 
+      блин смазать сливочным маслом а,сковороду смазать 
+      подсолнечным маслом.
 </pre>
 </body>
 </html>
